--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -10,3 +10,37 @@ ion-toolbar{
 ion-title{
     font-weight: 900;
 }
+.container-subtitle{
+    margin-bottom: 50px;
+}
+.subtitle{
+    font-weight: 300;
+    text-align: center;
+    font-size: 0.8rem;
+    color: #e96e5f;
+}
+.container-input{
+    margin-bottom: 25px;
+}
+ion-item {
+    color: #447f73;
+    --background: #e6b138 !important;
+    --border-color: #447f73;
+}
+.ingreso-rapido{
+    background-color: #e6b138;
+    height: 260px;
+    text-align: center;
+}
+h2{
+    color: #447f73;
+}
+.container-perfiles{
+    padding: 30px
+}
+.admin, .invitado{
+    margin-bottom: 20px
+}
+.invitado{
+    --background: #e96e5f;
+}
