--- a/src/app/pages/splash-screen/splash-screen.page.html
+++ b/src/app/pages/splash-screen/splash-screen.page.html
@@ -1,6 +1,7 @@
 <ion-content>
   <div class="container">
     <div>
+        <ion-title class="top">Tabla Diáctica App</ion-title>
       <div class="ion-margin-bottom">
         <ion-title class="slide-in-top title ion-text-center">4º B</ion-title>
       </div>
