--- a/src/app/components/custom-input/custom-input.component.html
+++ b/src/app/components/custom-input/custom-input.component.html
@@ -1,9 +1,9 @@
 <ion-item class="ion-margin-vertical">
-  <ion-icon color="warning" *ngIf="icon" slot="start" [name]="icon"></ion-icon>
+  <ion-icon  *ngIf="icon" slot="start" [name]="icon"></ion-icon>
   <ion-input labelPlacement="floating" [label]="label" autocomplete="autocomplete" [type]="type" [formControl]="control"></ion-input>
   <ion-buttons slot="end">
     <ion-button *ngIf="isPassword" (click)="showOrHidePassword()">
-      <ion-icon color="warning" [name]="hide ? 'eye-outline' : 'eye-off-outline'"></ion-icon>
+      <ion-icon  [name]="hide ? 'eye-outline' : 'eye-off-outline'"></ion-icon>
     </ion-button>
   </ion-buttons>
 </ion-item>
