--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,3 +1,10 @@
+ion-content{
+  --background: #fad06a;
+}
+.container-button{
+  position: absolute;
+  top: 0;
+}
 #container {
   text-align: center;
 
@@ -24,4 +31,15 @@
 
 #container a {
   text-decoration: none;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
 }
