modificados los estilos

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,7 +7,7 @@
   <div class="container content">
    <div>
     <ion-title class="ion-text-center" class="subtitle">
-      Para continuar ingresa con tu cuenta
+      Para continuar ingresá con tu cuenta
     </ion-title>
   </div>
     <div class="buttons-container">
