--- a/src/global.scss
+++ b/src/global.scss
@@ -28,3 +28,13 @@
 *{
     font-family: 'Skranji', cursive;
 }
+.toast-bg {
+    --background: #914f40;
+    color: #1c6dff;
+}
+ion-loading.custom-loading {
+    --background: #914f40;
+    --spinner-color: #1c6dff;
+  
+    color: #1c6dff;
+  }
