--- a/src/global.scss
+++ b/src/global.scss
@@ -33,8 +33,8 @@
     color: #1c6dff;
 }
 ion-loading.custom-loading {
-    --background: #914f40;
-    --spinner-color: #1c6dff;
+    --background: #1c6dff;
+    --spinner-color: #914f40;
   
-    color: #1c6dff;
+    color: #914f40;
   }
