--- a/src/app/components/colors/colors.component.scss
+++ b/src/app/components/colors/colors.component.scss
@@ -22,8 +22,11 @@
     justify-content: center;
     align-items: center;
     background-color: #914f40;
+    cursor: pointer;
 }
-
+.boton-numero{
+    background-color: #69382d;
+}
 img{
     height: 100px;
 }
