--- a/src/global.scss
+++ b/src/global.scss
@@ -33,7 +33,7 @@
     color: #1c6dff;
 }
 ion-loading.custom-loading {
-    --background: #1c6dff;
+    --background: #447f73;
     --spinner-color: #914f40;
   
     color: #914f40;
