--- a/src/app/components/colors/colors.component.html
+++ b/src/app/components/colors/colors.component.html
@@ -1,19 +1,19 @@
 <div class="container">
 
   <div class="contenedor-botones">
-    <div class="boton-numero" (click)="playSound('rojo')">
+    <div class="boton-numero" (click)="playSound('blue')">
       <img src="../../../assets/colors/blue.png" alt="">
     </div>
-    <div class="boton-numero" (click)="playSound('azul')">
+    <div class="boton-numero" (click)="playSound('red')">
       <img src="../../../assets/colors/red.png" alt="">
     </div>
-    <div class="boton-numero" (click)="playSound('negro')">
+    <div class="boton-numero" (click)="playSound('green')">
       <img src="../../../assets/colors/green.png" alt="">
     </div>
-    <div class="boton-numero" (click)="playSound('rosa')">
+    <div class="boton-numero" (click)="playSound('purple')">
       <img src="../../../assets/colors/purple.png" alt="">
     </div>
-    <div class="boton-numero grid-final" (click)="playSound('verde')">
+    <div class="boton-numero grid-final" (click)="playSound('brown')">
       <img src="../../../assets/colors/brown.png" alt="">
     </div>
   </div>
