--- a/src/app/pages/splash-screen/splash-screen.page.html
+++ b/src/app/pages/splash-screen/splash-screen.page.html
@@ -1,16 +1,13 @@
-<ion-content>
-  <div class="container">
-    <div>
-        <ion-title class="slide-in-top title ion-text-center top">Tabla Diáctica App</ion-title>
-      <div class="ion-margin-bottom">
-        <ion-title class="slide-in-top title ion-text-center">4º B</ion-title>
-      </div>
-      <div class="ion-text-center ion-margin-bottom">
-        <img class="icono slide-in-right" src="assets/icon/tabladicaticaApp.png" alt="icono-relevamiento">
-      </div>
-      <div class="ion-margin-top">
-        <ion-title class="title ion-text-center slide-in-bottom">Juan Sueldo</ion-title>
-      </div>
+
+
+<ion-content [fullscreen]="true">
+  <div class="container-splash">
+    <h2 class="alumn tracking-in-expand">Tabla Diáctica App</h2>
+    <div class="container-logo">
+      <img class="slide-in-top splash background" src="../../../assets/icon/backTabla.png"/>
+      <img class="slide-in-right splash logo" src="../../../assets/icon/tabladicaticaApp.png"/>
     </div>
+    <h2 class="text-shadow-drop-center"></h2>
+    <h2 class="division tracking-in-expand">Juan Sueldo 4º B</h2>
   </div>
 </ion-content>
